# Tiktalkhub-Automation

./: .env.example  README.md  device-render-engine.js  index.html  index.js  package-lock.json  package.json  tailwind.config.ts
cloudflare/: worker.js  wrangler.toml
data/: device-shells.json
electron/: main.js  prepack.js
scripts/: apply_schema.js  apply_security_policies.js  backfill_persona_backstories.js  bulk_delete_all_data.js  create_buckets.js  dedupe_personas_by_name.js  generate_behavior_datasets.js  generate_cookies_and_sessions.js  generate_device_shells.js  generate_personas.js  import_personas_to_supabase.js
scripts/batch/: launch_youtube_subscribers.js
scripts/ci/: deploy_edge_functions.sh  runner_health_check.sh
scripts/health/: data_health_check.js
scripts/phantom/: README.md  args.gn  install.sh  update.sh
scripts/phantom/skeleton/chrome/phantom/: BUILD.gn
scripts/phantom/skeleton/chrome/phantom/renderer/: fingerprint_agent.js
scripts/proxies/: score_worker.js
scripts/runner/: camoufoxAdapter.js  install_camoufox.js  playwrightController.js  server.js  syncHub.js
scripts/scheduler/: worker.js
scripts/vanta/: server.js
src/: App.tsx  index.css
src/components/: Header.tsx  Layout.tsx  RequireAuth.tsx  Sidebar.tsx  StatusCard.tsx
src/hooks/: useRealtimeSessions.ts  useSupabaseAuth.ts
src/lib/: automationDefaults.ts  automationHooks.ts  db.ts  proxyEngine.ts  (+8 more)
supabase/: schema.sql  schema_behavior.sql  schema_referral_engine.sql  schema_task_engine.sql  schema_task_templates.sql  schema_vanta.sql  security_policies.sql
(+29 files in other folders)
